# afterclaw

./: .env.example  .gitignore  .tmp-member-app.py  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  NIGHTLY.md  PLAN.md  README.md  app.py  install.ps1  install.sh  install_on_130.sh  package_to_icloud.sh  pyproject.toml  requirements.txt
ddns/: __init__.py  config_store.py  defaults.py  domain_split.py  service.py  state.py  validation.py  web.py
docs/: README-Preview.html  architecture-fix-split-plan.md  docker-replan-2026-05-26.md  managed-ddns-service.md  smoke-checklist.md  upgrade-script-source.md
fcc/: __init__.py  __main__.py  config.py  config_schema.py  http_access.py  platform.py  security.py  server.py  subtitle_align.py  subtitle_uploads.py
ip-tools/: push_vendor_ip_pools.sh
naming/: __init__.py  clean_names.py
scripts/: build_ui_compiled.js  capture_aliyun_pool.sh  capture_baidu_pool.sh  capture_guangya_pool.sh  detect_platform.sh  install_macos.sh  install_mint.sh  install_ubuntu.sh  install_windows.ps1  ip_pool_capture_common.sh  managed_ddns_service.py  setup_torrent_docker.sh  sync_guangya_pool_to_github.sh  uninstall.sh
shareclip/: .gitignore  README.md  __init__.py  app.py  restart_shareclip.sh  start_shareclip.sh
tests/: conftest.py  test_app_shell_no_route_backflow.py  test_appconfig_api_dispatch.py  test_backup_surface_disabled.py  test_config.py  test_config_schema.py  test_control_api_dispatch.py  test_ddns_api_dispatch.py  test_docker_api_dispatch.py  test_docker_service.py  test_files_api_dispatch.py  test_http_access.py  test_http_api_dispatch.py  test_member_api_dispatch.py  test_member_service.py  test_naming_service.py  (+18 more)
(+123 files in other folders)
