[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afterclaw"
version = "1.2.0.alpha"
description = "AfterClaw - single-port home server control panel"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "AfterClaw Contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
dependencies = []

[project.scripts]
fcc = "fcc.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fcc*", "ddns*", "naming*", "shareclip*"]
exclude = ["dist*", "docs*", "tests*"]
